# Effective_Modern_Cpp

./: .gitignore  CMakeLists.txt  README.md
Base1 const/: base1.cpp
Base1_const/: CMakeLists.txt  base1.cpp
base10_constructFun/: CMakeLists.txt  base10.cpp
base11_throw/: CMakeLists.txt  swap_copy.cpp  try_catch.cpp
base12_friend/: CMakeLists.txt  base12.cpp
base2_rval_quote/: CMakeLists.txt  base2.cpp
base3_arr_fun_ptr/: CMakeLists.txt  base3.cpp
base4_class_layout/: CMakeLists.txt  base4.cpp
base5_RTTI/: CMakeLists.txt  base5.cpp
base6_class_cast/: CMakeLists.txt  base6.cpp
base7_lambda_first/: CMakeLists.txt  base7.cpp
base8_usable_class/: CMakeLists.txt  base8.cpp
base9_CRPT_ExpressionTemplate/: CMakeLists.txt  base9.cpp
clause10_classEnum/: CMakeLists.txt  item10.cpp
clause11_delete/: CMakeLists.txt  item11.cpp
clause12_override/: CMakeLists.txt  item12.cpp
clause13_const_iterator/: CMakeLists.txt
clause14_noexcept/: CMakeLists.txt  item14.cpp
clause15_constexpr/: CMakeLists.txt  item15.cpp
clause17_unique_member/: CMakeLists.txt  item17.cpp
clause1_template_derivation/: CMakeLists.txt  item1.cpp
clause23_move_forward/: CMakeLists.txt  item23.cpp
clause2_auto_derivation/: CMakeLists.txt  item2.cpp
clause3_decltype/: CMakeLists.txt  item3.cpp
clause5_auto_initial/: CMakeLists.txt  item5.cpp
clause7_initial/: CMakeLists.txt  item7.cpp
clause8_nullptr_NULL/: CMakeLists.txt  item8.cpp
clause9_using_typedef/: CMakeLists.txt  item9.cpp
